--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -144,7 +144,7 @@
       <div class="header">
         <h1>MIKROTIK <span style="color:#ff6600">BLOCK SHARING HOTSPOT</span> OR <span style="color:#ff6600">LOCAL CONNECTIONS</span> WITH <span style="color:#ff6600">'CHANGE TTL'</span></h1>
       </div>
-      <div class="sidebar">
+      <div id="sidebar_" class="sidebar">
         <div style="margin-top:1px;">
           <div style="clear:both"></div>
           <img style="display: block;  margin-left: auto;  margin-right: auto;" src="https://user-images.githubusercontent.com/42666125/166714686-a2e1928e-7411-4119-a7b4-8cb41b4fbec5.png" alt="anti tethering mikrotik">
@@ -254,5 +254,8 @@
       </div>
     </div>	
     <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+</script>
   </body>
 </html>
