--- a/mikrotik-hotspot-wizard.html
+++ b/mikrotik-hotspot-wizard.html
@@ -285,6 +285,9 @@
       </div>
     </div>
     <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+</script>
 
   </body>
 </html>
