--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -141,7 +141,7 @@
         <h1>MIKROTIK <span style="color:#ff6600">HOTSPOT USERNAME PASSWORD</span> GENERATOR</h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <div style="margin-bottom:10px; height:auto">
             <label>Qty User Hotspot</label>
             <input type="text" maxlength="4" onkeypress="return event.charCode != 32" id="input-gty-hotspot" value="100" placeholder="256 only recomended">
@@ -277,7 +277,16 @@
       </div>
     </div>
 	
-    <script src="./login/login.js"></script>		
+    <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+let div_disable = document.getElementById('sidebar_');
+elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+for (i = 0; i < elements_disable.length; i++) {
+elements_disable[i].setAttribute('disabled', true);
+}
+</script>	
 
   </body>
 </html>
