--- a/static-routing-games-mangle-port.html
+++ b/static-routing-games-mangle-port.html
@@ -147,7 +147,7 @@
         <h1>MIKROTIK <span style="color:#ff6600;">STATIC ROUTING GAMES USING MANGLE PORT</span> SCRIPT GENERATOR</h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <label>RouterOS Version</label><br>
           <select onchange="myFunction()" id="ros-list">
             <option value="ros6">RouterOS v6.xx</option>
