--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -142,7 +142,7 @@
         <h1><span style="color:#ff6600">ALL TRAFFIC</span> TO <span style="color:#ff6600">VPN TUNNEL </span> SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <label>Select VPN Connection</label>
           <div style="clear: both;"></div>
           <div style="clear: both;"></div>
@@ -295,7 +295,17 @@
       </div>
     </div>
 		
-    <script src="./login/login.js"></script>
+<script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+let div_disable = document.getElementById('sidebar_');
+elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+for (i = 0; i < elements_disable.length; i++) {
+elements_disable[i].setAttribute('disabled', true);
+}
+</script>
+
 
   </body>
 </html>
