--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -146,7 +146,7 @@
       <div style="clear:both"></div>
       <div class="header">
       </div>
-      <div class="sidebar">
+      <div id="sidebar_" class="sidebar">
         <h1>ADVANCED MIKROTIK ROUTER-OS PROTECTIONS</h1>
         <div style="margin-top:15px; margin-bottom:15px;">  
             <div style="font-size:13px;margin:10px; color:#292929; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span>
@@ -686,6 +686,9 @@
         <div id="dialogboxfoot"></div>
       </div>
     </div>
-    <script src="./login/login.js"></script>
+    <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+</script></script>
   </body>
 </html>
