--- a/ecmp.html
+++ b/ecmp.html
@@ -137,7 +137,7 @@
         <h1>MIKROTIK <span style="color:#ff6600">LB ECMP</span> / <span style="color:#ff6600">LOAD BALANCING ECMP</span> SCRIPT GENERATOR FOR ROUTEROS</h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <div style="display:flex;">
             <div style="float:left; width:100%;">
               <label>Your Line WAN ISP</label><br>
@@ -408,5 +408,15 @@
       </div>
     </div>
     	<script src="./login/login.js"></script>	
+		<script>
+		document.querySelector("#year").innerHTML = new Date().getFullYear();
+		document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+
+		let div_disable = document.getElementById('sidebar_');
+		elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+		for (i = 0; i < elements_disable.length; i++) {
+			elements_disable[i].setAttribute('disabled', true);
+		}
+		</script>
   </body>
 </html>
