--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -142,7 +142,7 @@
         <h1>MIKROTIK <span style="color:#ff6600">FAILOVER</span> GENERATOR - <span style="color:#ff6600">RECURSIVE GATEWAY, CHECK GATEWAY, NETWATCH PING</span></h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <div style="display:flex;border-bottom:1px solid #bbb; margin-bottom:10px;padding-bottom:5px">
             <div style="width:50%;margin-right:5px">
               <label>Select Your Failover Method</label>
@@ -398,6 +398,15 @@
         <div id="dialogboxfoot"></div>
       </div>
     </div>		
-    <script src="./login/login.js"></script>		
+    <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+let div_disable = document.getElementById('sidebar_');
+elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+for (i = 0; i < elements_disable.length; i++) {
+elements_disable[i].setAttribute('disabled', true);
+}
+</script>	
   </body>
 </html>
