--- a/mikrotik-pcq-generator.html
+++ b/mikrotik-pcq-generator.html
@@ -142,7 +142,7 @@
         <h1>MIKROTIK <span style="color:#ff6600;">PCQ (PER-CONNECTION-QUEUE)</span> GENERATOR FOR <span style="color:#ff6600;">QUEUE TREE</span> AND <span style="color:#ff6600;">QUEUE SIMPLE</span></h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <div style="width:100%">
             <label>Queue Option</label>
             <select onchange="myFunctionOuput()" id="pcq-list">
@@ -333,7 +333,16 @@
       </div>
     </div>
 	
-    <script src="./login/login.js"></script>		
+    <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+let div_disable = document.getElementById('sidebar_');
+elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+for (i = 0; i < elements_disable.length; i++) {
+elements_disable[i].setAttribute('disabled', true);
+}
+</script>	
 
 		
   </body>
