--- a/mikrotik-share-user-multi-login.html
+++ b/mikrotik-share-user-multi-login.html
@@ -142,7 +142,7 @@
         <h1>MIKROTIK <span style="color:#ff6600">BANDWIDTH SHARE</span> FOR <span style="color:#ff6600">HOTSPOT SHARED USER</span> SCRIPT GENERATOR</h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <span style="color:#ff6600;"><b>SIMPLE QUEUE</b><br></span>
           <div style="display:flex">
             <div style=" width:100%;">
@@ -306,7 +306,16 @@
       </div>
     </div>
 		
-    <script src="./login/login.js"></script>		
+    <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+let div_disable = document.getElementById('sidebar_');
+elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+for (i = 0; i < elements_disable.length; i++) {
+elements_disable[i].setAttribute('disabled', true);
+}
+</script>	
 
 		
   </body>
