--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -141,7 +141,7 @@
         <h1>MIKROTIK <span style="color:#ff6600">PPP SECRETS USERNAME PASSWORD</span> GENERATOR</h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <div style="margin-bottom:10px; height:auto">
             <label>PPP Service Options</label>
             <select id="input-ppp-service">
@@ -287,7 +287,16 @@
       </div>
     </div>
 	
-    <script src="./login/login.js"></script>				
+    <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+let div_disable = document.getElementById('sidebar_');
+elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+for (i = 0; i < elements_disable.length; i++) {
+elements_disable[i].setAttribute('disabled', true);
+}
+</script>			
 
 		
   </body>
