--- a/simple-queue-generator.html
+++ b/simple-queue-generator.html
@@ -141,7 +141,7 @@
         <h1><span style="color:#ff6600">SIMPLE QUEUE</span> SCRIPT GENERATOR FOR MIKROTIK PLUS <span style="color:#ff6600">TOKEN BUCKET</span></h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <label>Parent Name Queue</label>
           <input type="text" id="input-parent" value="Global-Connection" placeholder="Global-Connection">
           <label>Target Local IP / Interface</label>
@@ -344,7 +344,16 @@
       </div>
     </div>
 	
-    <script src="./login/login.js"></script>		
+    <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+let div_disable = document.getElementById('sidebar_');
+elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+for (i = 0; i < elements_disable.length; i++) {
+elements_disable[i].setAttribute('disabled', true);
+}
+</script>	
 
 		
   </body>
