--- a/vpn-remote-generator.html
+++ b/vpn-remote-generator.html
@@ -142,7 +142,7 @@
         <h1>VPN REMOTE <span style="color:#ff6600">SSTP - L2TP - PPTP - OVPN</span> MIKROTIK GENERATOR</h1>
       </div>
       <div class="main-wrap">
-        <div class="sidebar">
+        <div id="sidebar_" class="sidebar">
           <label>Select VPN Connection</label>
           <div style="clear: both;"></div>
           <div style="clear: both;"></div>
@@ -282,7 +282,16 @@
       </div>
     </div>
 	
-    <script src="./login/login.js"></script>
+    <script src="./login/login.js"></script>	
+<script>
+document.querySelector("#year").innerHTML = new Date().getFullYear();
+document.getElementById("showScript").innerHTML = "Please Login and Subscribe ..";
+let div_disable = document.getElementById('sidebar_');
+elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
+for (i = 0; i < elements_disable.length; i++) {
+elements_disable[i].setAttribute('disabled', true);
+}
+</script></script>
     
 		
   </body>
