--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/nth.html">Load Balancing NTH</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/ecmp.html">Load Balancing ECMP</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-failover-script-generator.html">Failover Recursive Gateway</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io//static-routing-games.html">Games Static Routing Using Filter Raw</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io//static-routing-games-mangle-port.html">Games Static Routing Using Mangle Port</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/static-routing-games.html">Games Static Routing Using Filter Raw</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/static-routing-games-mangle-port.html">Games Static Routing Using Mangle Port</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-local-ip-pbr.html">Local Client IP Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
@@ -418,8 +418,8 @@
             <p><a target="_blank" rel="nofollow"  href="https://rlradius.id">RL-Radius</a></p>
           </div>
           <div class="column">
-            <p><a target="_blank" rel="nofollow"  href=" https://radiusku.net">Radiusku</a></p>
-            <p><a target="_blank" rel="nofollow"  href=" https://sourceforge.net/projects/the-userman">TheUserman</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://radiusku.net">Radiusku</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://sourceforge.net/projects/the-userman">TheUserman</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://github.com/ibnux/phpmixbill">PHPMixBill</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://github.com/aviantorichad/MIKROSTATOR">MIKROSTATOR</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://mikbotam.net">MIKBOTAM</a></p>
