--- a/docs.html
+++ b/docs.html
@@ -131,6 +131,9 @@
         <div style="margin-top:20px; padding-top:10px;width:100%;color:#292929; border-top:1px solid #bbb;font-weight:normal;font-size:13px">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananet.com/">BUANANET.COM</a> - All Rights Reserved.
         </div>
+          <div style="margin-top:0px; color:#777; font-size:11px">
+            Project by <a target="_blank" rel="nofollow" href="https://github.com/buananetpbun">@buananetpbun</a> PangkalanBun, KoBar 74112 - INDONESIA
+          </div>		
       </div>
     </div>
     <script>
