--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -250,7 +250,10 @@
         </div>
         <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BUANANET.COM</a> - All Rights Reserved.
-        </div>
+        <div style="margin-top:1px; color:#888; font-size:11px">
+          Project by <a target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
+        </div>       
+		</div>
       </div>
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
