--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -689,6 +689,6 @@
     <script src="./login/login.js"></script>	
 <script>
 document.querySelector("#year").innerHTML = new Date().getFullYear();
-</script></script>
+</script>
   </body>
 </html>
