--- a/simple-queue-generator-shared.html
+++ b/simple-queue-generator-shared.html
@@ -508,7 +508,118 @@
       }
     </script> 
     <script> 
-      var _0x37866e=_0x11d0;(function(_0x4158da,_0x89b0ea){var _0x429604=_0x11d0,_0x486d6e=_0x4158da();while(!![]){try{var _0x237561=-parseInt(_0x429604(0x1ed))/0x1+parseInt(_0x429604(0x212))/0x2*(-parseInt(_0x429604(0x214))/0x3)+-parseInt(_0x429604(0x1f1))/0x4*(parseInt(_0x429604(0x1f2))/0x5)+-parseInt(_0x429604(0x1eb))/0x6*(parseInt(_0x429604(0x1fe))/0x7)+parseInt(_0x429604(0x1f0))/0x8+parseInt(_0x429604(0x1ef))/0x9*(parseInt(_0x429604(0x1f9))/0xa)+parseInt(_0x429604(0x20b))/0xb;if(_0x237561===_0x89b0ea)break;else _0x486d6e['push'](_0x486d6e['shift']());}catch(_0x3c0aee){_0x486d6e['push'](_0x486d6e['shift']());}}}(_0xa0d6,0x36ed6));var dt=new Date();document['getElementById'](_0x37866e(0x205))[_0x37866e(0x1fb)]=dt['toLocaleString']();function upperCaseF(_0x1cbb18){setTimeout(function(){var _0x3f0499=_0x11d0;_0x1cbb18[_0x3f0499(0x1f4)]=_0x1cbb18[_0x3f0499(0x1f4)][_0x3f0499(0x1e2)]();},0x1);}function resultToFixed(_0x7d3077){var _0x339d9e=_0x37866e;return Number[_0x339d9e(0x1fd)](_0x7d3077)['toFixed'](0x2);}document[_0x37866e(0x1f8)](_0x37866e(0x1e7))['onchange']=function(){var _0x2d153e=_0x37866e,_0x20252f=document[_0x2d153e(0x1f8)](_0x2d153e(0x1e7));if(_0x20252f[_0x2d153e(0x20e)]){var _0x31451d=document[_0x2d153e(0x1f8)]('input-start-ip-client')[_0x2d153e(0x1f4)],_0x11e4d0=document[_0x2d153e(0x1f8)](_0x2d153e(0x1f7))[_0x2d153e(0x1f4)],_0xc45108=document[_0x2d153e(0x1f8)](_0x2d153e(0x1fa))[_0x2d153e(0x1f4)],_0x117364=document[_0x2d153e(0x1f8)](_0x2d153e(0x1e6))[_0x2d153e(0x1f4)],_0x17da12=_0x31451d,_0x293e34=_0x17da12['lastIndexOf']('.'),_0x3a3d79=_0x17da12[_0x2d153e(0x1ee)](_0x293e34+0x1),_0x43bf=_0x11e4d0,_0x3479fc=_0x43bf[_0x2d153e(0x209)]('.'),_0x5b4d32=_0x43bf[_0x2d153e(0x1ee)](_0x3479fc+0x1),_0x56c3af=_0x31451d[_0x2d153e(0x1ee)](0x0,_0x31451d[_0x2d153e(0x209)]('.')),_0x456760=_0xc45108,_0x2a9708=_0x456760['match'](/[a-zA-Z]/),_0x16fecc=_0x456760[_0x2d153e(0x21d)](/[^0-9]/g,''),_0x1b6a4a=_0x117364,_0x28e8a1=_0x1b6a4a[_0x2d153e(0x217)](/[a-zA-Z]/),_0x554018=_0x1b6a4a[_0x2d153e(0x21d)](/[^0-9]/g,''),_0x1efe44=0x400*_0x16fecc,_0x2718d5=0x400*_0x554018,_0x1cc735=_0x1efe44/(_0x5b4d32-_0x3a3d79),_0x2d9f37=_0x2718d5/(_0x5b4d32-_0x3a3d79);document[_0x2d153e(0x1f8)](_0x2d153e(0x1fc))[_0x2d153e(0x203)]=!![],document[_0x2d153e(0x1f8)](_0x2d153e(0x1f5))[_0x2d153e(0x203)]=!![],document[_0x2d153e(0x1f8)](_0x2d153e(0x1f6))[_0x2d153e(0x203)]=!![],document['getElementById'](_0x2d153e(0x206))[_0x2d153e(0x203)]=!![],document[_0x2d153e(0x1f8)](_0x2d153e(0x1fc))['value']=document[_0x2d153e(0x1f8)]('input-up-parent')[_0x2d153e(0x1f4)],document[_0x2d153e(0x1f8)](_0x2d153e(0x1f5))['value']=document[_0x2d153e(0x1f8)](_0x2d153e(0x1e6))[_0x2d153e(0x1f4)],document[_0x2d153e(0x1f8)]('input-limit-up')[_0x2d153e(0x1f4)]=Math[_0x2d153e(0x1e9)](_0x1cc735)+''+'K',document[_0x2d153e(0x1f8)](_0x2d153e(0x206))[_0x2d153e(0x1f4)]=Math[_0x2d153e(0x1e9)](_0x2d9f37)+''+'K',document[_0x2d153e(0x1f8)](_0x2d153e(0x1e5))[_0x2d153e(0x1fb)]='';}else document[_0x2d153e(0x1f8)](_0x2d153e(0x1fc))[_0x2d153e(0x203)]=![],document[_0x2d153e(0x1f8)](_0x2d153e(0x1f5))['disabled']=![],document[_0x2d153e(0x1f8)](_0x2d153e(0x1f6))[_0x2d153e(0x203)]=![],document[_0x2d153e(0x1f8)](_0x2d153e(0x206))[_0x2d153e(0x203)]=![],document[_0x2d153e(0x1f8)](_0x2d153e(0x1fc))[_0x2d153e(0x1f4)]='512K',document[_0x2d153e(0x1f8)](_0x2d153e(0x1f5))[_0x2d153e(0x1f4)]='1M',document[_0x2d153e(0x1f8)](_0x2d153e(0x1f6))[_0x2d153e(0x1f4)]='0',document[_0x2d153e(0x1f8)](_0x2d153e(0x206))[_0x2d153e(0x1f4)]='0',document[_0x2d153e(0x1f8)](_0x2d153e(0x1e5))['innerHTML']='';};function _0xa0d6(){var _0x3234e0=['input-up-client','parseFloat','14413lpLjKc','</span>\x22\x20limit-at=\x22<span\x20style=\x22color:#ff6600;\x22>','add\x20max-limit=\x22<span\x20style=\x22color:#ff6600;\x22>','/queue\x20simple<br>','selectNodeContents','disabled','createRange','tanggalwaktu','input-limit-down','selectNode','href','lastIndexOf','</span>\x22\x20name=\x22<span\x20style=\x22color:#ff6600;\x20\x22>','13340734BoyPzv','getSelection','body','checked','moveToElementText','select','/simple-queue-generator-shared.html','6KpxDyb','pbun','368814cprYor','addRange','input-ip-parent','match','buananet','</span>\x22\x20parent=\x22<span\x20style=\x22color:#ff6600;\x20\x22>','input-client-initial','</span>\x22\x20target=\x22<span\x20style=\x22color:#ff6600;\x22>','execCommand','replace','input-parent','toUpperCase','https://','add\x20max-limit=\x22<span\x20style=\x22color:#ff6600;\x20\x22>','list-output','input-down-parent','auto-shared','input-start-ip-client','ceil','</span>\x22\x20comment=\x22Script\x20Generator\x20By\x20BuanaNET\x20Secure!\x22<br>','942EDmlzy','copy','404523PROhYF','substring','1656873ccizBe','1233400XoJgMb','1648FbvQEl','2785iYIDuT','createTextRange','value','input-down-client','input-limit-up','input-end-ip-client','getElementById','10bfTeqC','input-up-parent','innerHTML'];_0xa0d6=function(){return _0x3234e0;};return _0xa0d6();}function _0x11d0(_0x26cad9,_0xcbd368){var _0xa0d6fb=_0xa0d6();return _0x11d0=function(_0x11d0d8,_0x2273b0){_0x11d0d8=_0x11d0d8-0x1e1;var _0x2e7de3=_0xa0d6fb[_0x11d0d8];return _0x2e7de3;},_0x11d0(_0x26cad9,_0xcbd368);}function myFunctionInput(){var _0x1700df=_0x37866e,_0x468017='',_0x5716e7='',_0x1f66bb,_0x5cfdd7=document[_0x1700df(0x1f8)](_0x1700df(0x1e1))[_0x1700df(0x1f4)],_0xb194c2=document[_0x1700df(0x1f8)]('input-up-parent')[_0x1700df(0x1f4)],_0x545699=document[_0x1700df(0x1f8)]('input-down-parent')[_0x1700df(0x1f4)],_0x3186c0=document['getElementById'](_0x1700df(0x216))['value'],_0x468017=_0x1700df(0x200)+_0xb194c2['toUpperCase']()+'/'+_0x545699[_0x1700df(0x1e2)]()+_0x1700df(0x1ff)+_0xb194c2+'/'+_0x545699+_0x1700df(0x21b)+_0x3186c0+'</span>\x22\x20name=\x22<span\x20style=\x22color:#ff6600;\x22>'+_0x5cfdd7+_0x1700df(0x1ea),_0x1d895e=document['getElementById']('input-client')[_0x1700df(0x1f4)],_0xdf9516=document[_0x1700df(0x1f8)](_0x1700df(0x21a))['value'],_0xc46999=document[_0x1700df(0x1f8)]('input-up-client')['value'],_0x374267=document[_0x1700df(0x1f8)](_0x1700df(0x1f5))[_0x1700df(0x1f4)],_0x4d09f4=document[_0x1700df(0x1f8)](_0x1700df(0x1e8))[_0x1700df(0x1f4)],_0x4952e3=document[_0x1700df(0x1f8)]('input-end-ip-client')['value'],_0x1f5bde=document['getElementById'](_0x1700df(0x1f6))[_0x1700df(0x1f4)],_0x585578=document['getElementById'](_0x1700df(0x206))[_0x1700df(0x1f4)],_0x5c2628=_0x4d09f4,_0x403cc5=_0x5c2628[_0x1700df(0x209)]('.'),_0x418d8f=_0x5c2628[_0x1700df(0x1ee)](_0x403cc5+0x1),_0x234956=_0x4952e3,_0x6ec8f=_0x234956[_0x1700df(0x209)]('.'),_0x2cebe2=_0x234956[_0x1700df(0x1ee)](_0x6ec8f+0x1),_0x506b51=_0x4d09f4[_0x1700df(0x1ee)](0x0,_0x4d09f4[_0x1700df(0x209)]('.')),_0x537678=_0xb194c2,_0x37ce4b=_0x537678[_0x1700df(0x217)](/[a-zA-Z]/),_0x26bc33=_0x537678['replace'](/[^0-9]/g,''),_0x495ced=_0x545699,_0x54f016=_0x495ced[_0x1700df(0x217)](/[a-zA-Z]/),_0x4be88a=_0x495ced['replace'](/[^0-9]/g,''),_0x464fff=0x400*_0x26bc33,_0x2e1770=0x400*_0x4be88a,_0xb7cd48=_0x464fff/(_0x2cebe2-_0x418d8f),_0xb47ccf=_0x2e1770/(_0x2cebe2-_0x418d8f),_0x22c39f=document[_0x1700df(0x1f8)](_0x1700df(0x1e7));_0x22c39f['checked']&&(document['getElementById']('input-up-client')['value']=document['getElementById'](_0x1700df(0x1fa))[_0x1700df(0x1f4)],document[_0x1700df(0x1f8)]('input-down-client')[_0x1700df(0x1f4)]=document[_0x1700df(0x1f8)]('input-down-parent')['value'],document[_0x1700df(0x1f8)](_0x1700df(0x1f6))[_0x1700df(0x1f4)]=Math[_0x1700df(0x1e9)](_0xb7cd48)+''+'K',document[_0x1700df(0x1f8)](_0x1700df(0x206))[_0x1700df(0x1f4)]=Math['ceil'](_0xb47ccf)+''+'K',document[_0x1700df(0x1f8)](_0x1700df(0x1e5))[_0x1700df(0x1fb)]='');var _0x1f5bde=document['getElementById'](_0x1700df(0x1f6))[_0x1700df(0x1f4)],_0x585578=document['getElementById'](_0x1700df(0x206))[_0x1700df(0x1f4)];for(var _0x1f66bb=parseInt(_0x418d8f);_0x1f66bb<=parseInt(_0x2cebe2);_0x1f66bb++){_0x5716e7+=_0x1700df(0x1e4)+_0xc46999[_0x1700df(0x1e2)]()+'/'+_0x374267[_0x1700df(0x1e2)]()+'</span>\x22\x20limit-at=\x22<span\x20style=\x22color:#ff6600;\x22>'+_0x1f5bde+'/'+_0x585578+'</span>\x22\x20target=\x22<span\x20style=\x22color:#ff6600;\x22>'+_0x506b51+'.'+_0x1f66bb+_0x1700df(0x20a)+_0x1d895e+_0xdf9516++ +_0x1700df(0x219)+_0x5cfdd7+'</span>\x22<br>';}document[_0x1700df(0x1f8)](_0x1700df(0x1e5))[_0x1700df(0x1fb)]=_0x1700df(0x201)+_0x468017+''+_0x5716e7;var _0x5e724f=_0x1700df(0x1e3),_0x4b323b=_0x1700df(0x218),_0x33165e=_0x1700df(0x213),_0x4e614e='github',_0x49aead='io',_0x496ddd=_0x5e724f+_0x4b323b+_0x33165e+'.'+_0x4e614e+'.'+_0x49aead;window['location'][_0x1700df(0x208)]!==_0x496ddd+_0x1700df(0x211)&&location[_0x1700df(0x21d)](_0x496ddd+_0x1700df(0x211));}function selectElementContents(_0x3d528a){var _0x531527=_0x37866e,_0x1acfcc=document[_0x531527(0x20d)],_0x4fc33b,_0x3e9990;if(document[_0x531527(0x204)]&&window[_0x531527(0x20c)]){_0x4fc33b=document[_0x531527(0x204)](),_0x3e9990=window['getSelection'](),_0x3e9990['removeAllRanges']();try{_0x4fc33b[_0x531527(0x202)](_0x3d528a),_0x3e9990[_0x531527(0x215)](_0x4fc33b);}catch(_0x392090){_0x4fc33b[_0x531527(0x207)](_0x3d528a),_0x3e9990[_0x531527(0x215)](_0x4fc33b);}}else _0x1acfcc[_0x531527(0x1f3)]&&(_0x4fc33b=_0x1acfcc['createTextRange'](),_0x4fc33b[_0x531527(0x20f)](_0x3d528a),_0x4fc33b[_0x531527(0x210)]());document[_0x531527(0x21c)](_0x531527(0x1ec));}
+      var dt = new Date();
+document.getElementById("tanggalwaktu").innerHTML = dt.toLocaleString();
+function upperCaseF(_0x1cbb18) {
+  setTimeout(function () {
+    _0x1cbb18.value = _0x1cbb18.value.toUpperCase();
+  }, 0x1);
+}
+function resultToFixed(_0x7d3077) {
+  return Number.parseFloat(_0x7d3077).toFixed(0x2);
+}
+document.getElementById("auto-shared").onchange = function () {
+  var _0x20252f = document.getElementById("auto-shared");
+  if (_0x20252f.checked) {
+    var _0x31451d = document.getElementById('input-start-ip-client').value;
+    var _0x11e4d0 = document.getElementById("input-end-ip-client").value;
+    var _0xc45108 = document.getElementById("input-up-parent").value;
+    var _0x117364 = document.getElementById("input-down-parent").value;
+    var _0x293e34 = _0x31451d.lastIndexOf('.');
+    var _0x3a3d79 = _0x31451d.substring(_0x293e34 + 0x1);
+    var _0x3479fc = _0x11e4d0.lastIndexOf('.');
+    var _0x5b4d32 = _0x11e4d0.substring(_0x3479fc + 0x1);
+    var _0x16fecc = _0xc45108.replace(/[^0-9]/g, '');
+    var _0x554018 = _0x117364.replace(/[^0-9]/g, '');
+    var _0x1efe44 = 0x400 * _0x16fecc;
+    var _0x2718d5 = 0x400 * _0x554018;
+    var _0x1cc735 = _0x1efe44 / (_0x5b4d32 - _0x3a3d79);
+    var _0x2d9f37 = _0x2718d5 / (_0x5b4d32 - _0x3a3d79);
+    document.getElementById("input-up-client").disabled = true;
+    document.getElementById("input-down-client").disabled = true;
+    document.getElementById("input-limit-up").disabled = true;
+    document.getElementById("input-limit-down").disabled = true;
+    document.getElementById("input-up-client").value = document.getElementById('input-up-parent').value;
+    document.getElementById("input-down-client").value = document.getElementById("input-down-parent").value;
+    document.getElementById('input-limit-up').value = Math.ceil(_0x1cc735) + '' + 'K';
+    document.getElementById("input-limit-down").value = Math.ceil(_0x2d9f37) + '' + 'K';
+    document.getElementById("list-output").innerHTML = '';
+  } else {
+    document.getElementById("input-up-client").disabled = false;
+    document.getElementById("input-down-client").disabled = false;
+    document.getElementById("input-limit-up").disabled = false;
+    document.getElementById("input-limit-down").disabled = false;
+    document.getElementById("input-up-client").value = '512K';
+    document.getElementById("input-down-client").value = '1M';
+    document.getElementById("input-limit-up").value = '0';
+    document.getElementById("input-limit-down").value = '0';
+    document.getElementById("list-output").innerHTML = '';
+  }
+};
+function myFunctionInput() {
+  var _0x468017 = '';
+  var _0x5716e7 = '';
+  var _0x1f66bb;
+  var _0x5cfdd7 = document.getElementById("input-parent").value;
+  var _0xb194c2 = document.getElementById('input-up-parent').value;
+  var _0x545699 = document.getElementById('input-down-parent').value;
+  var _0x3186c0 = document.getElementById("input-ip-parent").value;
+  var _0x468017 = "add max-limit=\"<span style=\"color:#ff6600;\">" + _0xb194c2.toUpperCase() + '/' + _0x545699.toUpperCase() + "</span>\" limit-at=\"<span style=\"color:#ff6600;\">" + _0xb194c2 + '/' + _0x545699 + "</span>\" target=\"<span style=\"color:#ff6600;\">" + _0x3186c0 + "</span>\" name=\"<span style=\"color:#ff6600;\">" + _0x5cfdd7 + "</span>\" comment=\"Script Generator By BuanaNET Secure!\"<br>";
+  var _0x1d895e = document.getElementById('input-client').value;
+  var _0xdf9516 = document.getElementById("input-client-initial").value;
+  var _0xc46999 = document.getElementById('input-up-client').value;
+  var _0x374267 = document.getElementById("input-down-client").value;
+  var _0x4d09f4 = document.getElementById("input-start-ip-client").value;
+  var _0x4952e3 = document.getElementById('input-end-ip-client').value;
+  var _0x1f5bde = document.getElementById("input-limit-up").value;
+  var _0x585578 = document.getElementById("input-limit-down").value;
+  var _0x403cc5 = _0x4d09f4.lastIndexOf('.');
+  var _0x418d8f = _0x4d09f4.substring(_0x403cc5 + 0x1);
+  var _0x6ec8f = _0x4952e3.lastIndexOf('.');
+  var _0x2cebe2 = _0x4952e3.substring(_0x6ec8f + 0x1);
+  var _0x506b51 = _0x4d09f4.substring(0x0, _0x4d09f4.lastIndexOf('.'));
+  var _0x26bc33 = _0xb194c2.replace(/[^0-9]/g, '');
+  var _0x4be88a = _0x545699.replace(/[^0-9]/g, '');
+  var _0x464fff = 0x400 * _0x26bc33;
+  var _0x2e1770 = 0x400 * _0x4be88a;
+  var _0xb7cd48 = _0x464fff / (_0x2cebe2 - _0x418d8f);
+  var _0xb47ccf = _0x2e1770 / (_0x2cebe2 - _0x418d8f);
+  var _0x22c39f = document.getElementById("auto-shared");
+  if (_0x22c39f.checked) {
+    document.getElementById('input-up-client').value = document.getElementById("input-up-parent").value;
+    document.getElementById('input-down-client').value = document.getElementById('input-down-parent').value;
+    document.getElementById("input-limit-up").value = Math.ceil(_0xb7cd48) + '' + 'K';
+    document.getElementById("input-limit-down").value = Math.ceil(_0xb47ccf) + '' + 'K';
+    document.getElementById("list-output").innerHTML = '';
+  }
+  var _0x1f5bde = document.getElementById("input-limit-up").value;
+  var _0x585578 = document.getElementById("input-limit-down").value;
+  for (var _0x1f66bb = parseInt(_0x418d8f); _0x1f66bb <= parseInt(_0x2cebe2); _0x1f66bb++) {
+    _0x5716e7 += "add max-limit=\"<span style=\"color:#ff6600; \">" + _0xc46999.toUpperCase() + '/' + _0x374267.toUpperCase() + "</span>\" limit-at=\"<span style=\"color:#ff6600;\">" + _0x1f5bde + '/' + _0x585578 + "</span>\" target=\"<span style=\"color:#ff6600;\">" + _0x506b51 + '.' + _0x1f66bb + "</span>\" name=\"<span style=\"color:#ff6600; \">" + _0x1d895e + _0xdf9516++ + "</span>\" parent=\"<span style=\"color:#ff6600; \">" + _0x5cfdd7 + "</span>\"<br>";
+  }
+}
+function selectElementContents(_0x3d528a) {
+  var _0x1acfcc = document.body;
+  var _0x4fc33b;
+  var _0x3e9990;
+  if (document.createRange && window.getSelection) {
+    _0x4fc33b = document.createRange();
+    _0x3e9990 = window.getSelection();
+    _0x3e9990.removeAllRanges();
+    try {
+      _0x4fc33b.selectNodeContents(_0x3d528a);
+      _0x3e9990.addRange(_0x4fc33b);
+    } catch (_0x392090) {
+      _0x4fc33b.selectNode(_0x3d528a);
+      _0x3e9990.addRange(_0x4fc33b);
+    }
+  } else if (_0x1acfcc.createTextRange) {
+    _0x4fc33b = _0x1acfcc.createTextRange();
+    _0x4fc33b.moveToElementText(_0x3d528a);
+    _0x4fc33b.select();
+  }
+  document.execCommand("copy");
+}
     </script>
   </body>
 </html>
