--- a/mikrotik-access-block.html
+++ b/mikrotik-access-block.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MikroTik Block Youtube, Tiktok, Facebook, WhatsApp, etc - Buananet.com</title>
-    <meta content='MikroTik Block (Youtube, Tiktok, Facebook, WhatsApp, etc) Script Generator for RouterOS - Buananet.com' name='description'>
+    <title>MikroTik Block Youtube, Tiktok, Facebook, WhatsApp, etc - BuanaNET-Pbun</title>
+    <meta content='MikroTik Block (Youtube, Tiktok, Facebook, WhatsApp, etc) Script Generator for RouterOS - BuanaNET-Pbun' name='description'>
     <meta content='Block, youtube, tiktok, facebook, whatsapp, webside, mikrotik, router, winbox, termimal, rsc, script, pbr' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
-    <link rel="shortcut icon" href="https://buananet.com/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="MikroTik Block (Youtube, Tiktok, Facebook, WhatsApp, etc) By Buananet.com">
-    <meta property="og:description" content="MikroTik Block (Youtube, Tiktok, Facebook, WhatsApp, etc) By Buananet.com">
+    <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="MikroTik Block (Youtube, Tiktok, Facebook, WhatsApp, etc) By BuanaNET-Pbun">
+    <meta property="og:description" content="MikroTik Block (Youtube, Tiktok, Facebook, WhatsApp, etc) By BuanaNET-Pbun">
     <meta property="og:image" content="https://buananet.com/img/mikrotik-bloked.png">
-    <meta property="og:image:alt" content="MikroTik Block (Youtube, Tiktok, Facebook, WhatsApp, etc) By Buananet.com">
+    <meta property="og:image:alt" content="MikroTik Block (Youtube, Tiktok, Facebook, WhatsApp, etc) By BuanaNET-Pbun">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://buananet.com/mikrotik-access-block.html">
+    <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-access-block.html">
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
     <link rel="stylesheet" href="./login/login.css">
     <style>
@@ -117,10 +117,10 @@
           <img alt="mikrotik" src="./img/made-for-mikrotik.png">
         </div>
         <ul>
-          <li><a href="https://buananet.com/">HOME</a></li>
-          <li><a href="https://buananet.com/updates.html">UPDATES</a></li>
-          <li><a href="https://buananet.com/docs.html">DOCS</a></li>
-          <li><a href="https://buananet.com/contact.html">CONTACT</a></li>
+          <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
+          <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
+          <li><a href="javascript:callmodal()">DONATE</a></li>
+          <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
         </ul>
       <div class="show-homepage-menu">
         <div id="homepage" class="hide">
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-          <a href="https://buananet.com/mikrotik-access-block.html"><img alt="buananet.com" style="float:left; margin-top:0px;margin-right:5px" width='35' src="./img/mylogo.png"><span style='color:#ff6600 !important'>BUANANET</span>.COM</a>  
+          <a href="https://buananetpbun.github.io/mikrotik-access-block.html"><img alt="buananetpbun.github.io" style="float:left; margin-top:0px;margin-right:5px" width='35' src="./img/mylogo.png"><span style='color:#ff6600 !important'>BUANANET</span>.COM</a>  
         </div>
       </div>
       <div style="clear:both"></div>
@@ -198,22 +198,22 @@
         <div class='list-output-content' id="list-output-content" style="font-size:13px;">
           <span style="color:green">## STEP 1 - Copy Paste to Terminal</span><br>
           /file remove "<span style="color:#ff6600">Mikrotik-<span id='remove1'>Youtube</span>.rsc</span>"<br>
-          /tool fetch url="https://buananet.com/mikrotik-routeros-rsc/<span style="color:#ff6600">Mikrotik-<span id='tool-fetch'>Youtube</span>.rsc</span>" dst-path="<span style="color:#ff6600">Mikrotik-<span id="dst-path">Youtube</span>.rsc</span>"<br>
+          /tool fetch url="https://buananetpbun.github.io/mikrotik-routeros-rsc/<span style="color:#ff6600">Mikrotik-<span id='tool-fetch'>Youtube</span>.rsc</span>" dst-path="<span style="color:#ff6600">Mikrotik-<span id="dst-path">Youtube</span>.rsc</span>"<br>
         </div>
         <button style="float:right; margin-top:10px; margin-bottom:10px; font-weight:bold;font-size:13px" type="button" onclick="selectElementContents(document.getElementById('list-output-content2'))">Copy STEP 2</button>		
         <div class='list-output-content2' id="list-output-content2" style="font-size:13px;">
           <span style="color:green">## STEP 2 - Copy Paste to Terminal</span><br>	
           /import file-name="<span style="color:#ff6600">Mikrotik-<span id="import-file">Youtube</span>.rsc</span>"<br>
           /file remove "<span style="color:#ff6600">Mikrotik-<span id='remove2'>Youtube</span>.rsc</span>"<br>		  
-          /ip firewall filter add action=drop chain=forward disabled=no dst-address-list="<span style="color:#ff6600">Mikrotik-<span id="add-list1">Youtube</span></span>" comment="<span style="color:#ff6600">Block <span id="comment1">Youtube</span> - buananet.com</span>" <br>
-          /ip firewall raw add action=drop chain=forward disabled=no dst-address-list="<span style="color:#ff6600">Mikrotik-<span id="add-list2">Youtube</span></span>" comment="<span style="color:#ff6600">Block <span id="comment2">Youtube</span> - buananet.com</span>" <br> 
+          /ip firewall filter add action=drop chain=forward disabled=no dst-address-list="<span style="color:#ff6600">Mikrotik-<span id="add-list1">Youtube</span></span>" comment="<span style="color:#ff6600">Block <span id="comment1">Youtube</span> - buananetpbun.github.io</span>" <br>
+          /ip firewall raw add action=drop chain=forward disabled=no dst-address-list="<span style="color:#ff6600">Mikrotik-<span id="add-list2">Youtube</span></span>" comment="<span style="color:#ff6600">Block <span id="comment2">Youtube</span> - buananetpbun.github.io</span>" <br> 
         </div>
       </div>
       <div class="footer">
         <div style="float:right;margin-top:8px">    
           <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23696C67&title_bg=%233B860B&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>	
-        © Copyright 2020-<span id="year">2024</span> <a target="_blank" href="https://buananet.com/">BUANANET.COM</a> - All Rights Reserved..
+        © Copyright 2020-<span id="year">2024</span> <a target="_blank" href="https://buananetpbun.github.io/">BUANANET.COM</a> - All Rights Reserved..
           <div style="margin-top:3px; color:#777; font-size:11px; font-weight:normal">
             Project by <a target="_blank" rel="nofollow" href="https://github.com/buananetpbun">@buananetpbun</a> PangkalanBun, KoBar 74112 - INDONESIA
           </div>
