--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dhcp-rogue.html">Looping / Unknown DHCP Rogue Server</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
         </div>
-        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ PROTECTION <span style="color:#ff6600">//</span> BLOCK</span> <span style="color:#ff6600">//</span> BACKUP</span></div>
+        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ PROTECTION <span style="color:#ff6600">//</span> BLOCK <span style="color:#ff6600">//</span> BACKUP</span></div>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard from ISP</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
