--- a/mikrotik-access-block.html
+++ b/mikrotik-access-block.html
@@ -222,7 +222,8 @@
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
       <div id="center-screen1" class="center-screen"><div style="font-size:20px; background-color:#333; padding:20px; border-radius:10px">PLEASE ACTIVATE YOUR EMAIL<br><button id="verify">VERIFY YOUR E-MAIL NOW</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px; display:none" id="countdown2"></div></div></div>
-      <div id="center-screen2" class="center-screen"><div style="font-size:20px;background-color:#333; padding:20px; border-radius:10px; margin-bottom:10px">GET FULL ACCESS<br>PLEASE SUBSCRIBE<br><button id="not-subscribe">SUBSCRIBE NOW</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px; display:none" id="countdown3">Loading..</div></div>
+      <div id="center-screen2" class="center-screen"><div style="font-size:20px;background-color:#333; padding:20px; border-radius:10px">GET PREMIUM ACCESS<br>PLEASE SUBSCRIBE<br><button id="not-subscribe">GO TO BUANANET.COM</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown3">
+You will be redirected to the new domain buananet.com</div></div>
 	  </div>	  
     </div>
     <div id="dialogoverlay"></div>
