--- a/mikrotik-access-block.html
+++ b/mikrotik-access-block.html
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-          <a href="https://buananetpbun.github.io/mikrotik-access-block.html"><img alt="buananetpbun.github.io" style="float:left; margin-top:0px;margin-right:5px" width='35' src="./img/mylogo.png"><span style='color:#ff6600 !important'>BUANANET</span>.COM</a>  
+          <a href="https://buananetpbun.github.io/mikrotik-access-block.html"><img alt="buananetpbun.github.io" style="float:left; margin-top:0px;margin-right:5px" width='35' src="./img/mylogo.png"><span style='color:#ff6600 !important'>Buananetpbun</span>.Github.io</a>    
         </div>
       </div>
       <div style="clear:both"></div>
@@ -216,7 +216,7 @@
         <div style="float:right;margin-top:8px">    
           <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23696C67&title_bg=%233B860B&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>	
-        © Copyright 2020-<span id="year">2024</span> <a target="_blank" href="https://buananetpbun.github.io/">BUANANET.COM</a> - All Rights Reserved..
+        © Copyright 2020-<span id="year">2024</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> - All Rights Reserved..
           <div style="margin-top:3px; color:#777; font-size:11px; font-weight:normal">
             Project by <a target="_blank" rel="nofollow" href="https://github.com/buananetpbun">@buananetpbun</a> PangkalanBun, KoBar 74112 - INDONESIA
           </div>
