--- a/mikrotik-change-mac-address.html
+++ b/mikrotik-change-mac-address.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mikrotik Change Interface  Mac Address Generator - BuanaNETPBun.Github.io</title>
-    <meta content='Mikrotik Change Interface  Mac Address Generator - BuanaNETPBun.Github.io' name='description'>
+    <title>Change Mac Address Interface Mikrotik Generator - BuanaNETPBun.Github.io</title>
+    <meta content='Change Mac Address Interface Mikrotik Generator - BuanaNETPBun.Github.io' name='description'>
     <meta content='mikrotik, mac address, interface, wan, script, generator, router, winbox, termimal, rsc' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.gothub.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Mikrotik Change Interface  Mac Address Generator By BuanaNET-Pbun">
-    <meta property="og:description" content="Mikrotik Change Interface  Mac Address Generator By BuanaNET-Pbun">
+    <meta property="og:title" content="Change Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
+    <meta property="og:description" content="Change Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
     <meta property="og:image" content="https://buananet.com/img/mikrotik_mac_address.png">
-    <meta property="og:image:alt" content="Mikrotik Change Interface  Mac Address Generator By BuanaNET-Pbun">
+    <meta property="og:image:alt" content="Change Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.gothub.io/mikrotik-change-mac-address.html">
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
@@ -19,7 +19,7 @@
     <style>
       /* -------------------------------------------------------------
       ################################################################
-      # Mikrotik Change Interface  Mac Address Generator
+      # Change Mac Address Interface Mikrotik Generator
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
@@ -137,7 +137,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1><span style="color:#ff6600 !important">MIKROTIK</span> : CHANGE INTERFACE MAC ADDRESS GENERATOR</h1>
+        <h1>CHANGE MAC ADDRESS INTERFACE <span style="color:#ff6600 !important">MIKROTIK</span> GENERATOR</h1>
       </div>
       <div id="sidebar_" class="sidebar">
 		<div style="clear:both"></div>
@@ -162,7 +162,7 @@
           <div id="list-output-r1">
             <span style="color:#ff6600;">
             ################################################################<br>
-            # MIKROTIK : INTERFACE CHANGE MAC ADDRESS GENERATOR<br>
+            # CHANGE MAC ADDRESS INTERFACE MIKROTIK GENERATOR <br>
             # Created By: buananetpbun.gothub.io<br>
             ################################################################<br>
             </span>
