--- a/mikrotik-change-mac-address.html
+++ b/mikrotik-change-mac-address.html
@@ -137,7 +137,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>CHANGE MAC ADDRESS INTERFACE <span style="color:#ff6600 !important">MIKROTIK</span> GENERATOR</h1>
+        <h1>CHANGE <span style="color:#ff6600 !important">MAC ADDRESS</span> INTERFACE MIKROTIK GENERATOR</h1>
       </div>
       <div id="sidebar_" class="sidebar">
 		<div style="clear:both"></div>
