--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       By BuanaNETPBun.Github.io' name='description'>
     <meta content='mikrotik, router os, tools, load balancing, queue, vpn, routing, winbox, termimal, rsc, script, hotspot, wireless, mangle, nat' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
+	<link rel="canonical" href="https://buananet.com" />	
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="https://buananetpbun.github.io/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://buananetpbun.github.io/img/favicon-32x32.png">
