--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -7,6 +7,7 @@
     <meta content='Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning - BuanaNETPBun.Github.io' name='description'>
     <meta content='mikrotik ninja, isp, wan, script, generator, mikrotik, router, winbox, termimal, rsc' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
+	<link rel="canonical" href="https://buananet.com/mikrotik-hide-my-router-from-isp.html">	
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning By BuanaNET-Pbun">
     <meta property="og:description" content="Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning By BuanaNET-Pbun">
