--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
       # Designer  : Agus Ramadhani / BuanaNET
-      # Github    : https://buananetpbun.github.io
+      # Github    : https://buananetpbun.github.io/
       # Site      : https://www.o-om.com
       # Sosmed    : https://fb.me/buananetmikrotik/	
       ################################################
