--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       # Tools For Mikrotik By BuanaNETPBun.Github.io
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://buananetpbun.github.io/
-      # Site      : https://www.o-om.com
+      # Site      : https://www.o-om.com/
       # Sosmed    : https://fb.me/buananetmikrotik/	
       ################################################
       ----------------------------------------------- */  
