--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
-      # Designer  : Agus Ramadhani / BuanaNET
+      # Designer  : Agus Ramadhani / Buananet.com
       # Github    : https://buananetpbun.github.io/
       # Site      : https://www.o-om.com/
       # Sosmed    : https://fb.me/buananetmikrotik/	
