--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
-      # Designer  : Agus Ramadhani / Buananet.com/
-      # Github    : https://buananetpbun.github.io/
-      # Site      : https://www.o-om.com/
-      # Sosmed    : https://fb.me/buananetmikrotik/	
+      # Designer  : Agus Ramadhani / Buananet.com
+      # Github    : https://buananetpbun.github.io
+      # Site      : https://www.o-om.com
+      # Sosmed    : https://fb.me/buananetmikrotik
       ################################################
       ----------------------------------------------- */  
       *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
