--- a/mikrotik-change-mac-address.html
+++ b/mikrotik-change-mac-address.html
@@ -21,9 +21,9 @@
       ################################################################
       # Change or Random Mac Address Interface Mikrotik Generator
       # Designer  : Agus Ramadhani / BuanaNET
-      # Github    : https://buananetpbun.github.io
-      # Site      : http://www.o-om.com
-      # Sosmed    : https://fb.me/buananet.pbun	
+      # Github    : https://buananetpbun.github.io/
+      # Site      : http://www.o-om.com/
+      # Sosmed    : https://fb.me/buananet.pbun/
       ################################################################
       ---------------------------------------------------------------- */  
       *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
